Corrected text align.

--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,5 @@ body {
 }
 .page-content {
 	padding: 3rem 1.5rem;
-	text-align: center;
+	text-align: left;
 }
